hot fix for refreshtoken validation, docker auth_fix
