# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/users/login/": {
+        "/auth/login/": {
             "post": {
                 "description": "Autentica a un usuario y devuelve un token de acceso y un token de refresco.",
                 "consumes": [
@@ -47,7 +47,7 @@
                 }
             }
         },
-        "/users/refresh": {
+        "/auth/refresh": {
             "post": {
                 "description": "Refresca un token de acceso utilizando un token de refresco válido",
                 "consumes": [
@@ -105,7 +105,7 @@
                 }
             }
         },
-        "/users/resources": {
+        "/auth/resources": {
             "get": {
                 "description": "Retrieve resources associated with a specific role ID",
                 "consumes": [
